--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
@@ -39,5 +40,5 @@
   "devDependencies": {
     "html-webpack-plugin": "^4.5.0"
   },
-  "proxy":"http://copafilmes.azurewebsites.net"
+  "proxy": "http://copafilmes.azurewebsites.net"
 }
