--- a/backend/CopaFilmes.Domain/CopaFilmes.Domain.csproj
+++ b/backend/CopaFilmes.Domain/CopaFilmes.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,8 +6,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CopaFilmes.Domain.Entities\CopaFilmes.Domain.Entities.csproj" />
-    <ProjectReference Include="..\CopaFilmes.Domain\CopaFilmes.Domain.csproj" />
   </ItemGroup>
-
 
 </Project>
