--- a/backend/CopaFilmes.API/CopaFilmes.API.csproj
+++ b/backend/CopaFilmes.API/CopaFilmes.API.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CopaFilmes.Domain.Entities\CopaFilmes.Domain.Entities.csproj" />
     <ProjectReference Include="..\CopaFilmes.Domain\CopaFilmes.Domain.csproj" />
+    <ProjectReference Include="..\CopaFilmes.Infra.CrossCutting\CopaFilmes.Infra.CrossCutting.csproj" />
   </ItemGroup>
 
 
