--- a/backend/CopaFilmes.Infra.CrossCutting/CopaFilmes.Infra.CrossCutting.csproj
+++ b/backend/CopaFilmes.Infra.CrossCutting/CopaFilmes.Infra.CrossCutting.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CopaFilmes.Domain\CopaFilmes.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
